[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-core"
version = "0.178.1"
description = "QSP Core (Stage178 LTS) - executable attack-verified core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["qsp*", "crypto*", "protocol*", "keysources*", "policy*"]


